# libpacker

./: .gitignore  CMakeLists.txt  README.md
include/packer/: VirtImage.hpp  data.hpp  packer.hpp  user.hpp  virt.hpp
include/packer/core/: VImage.hpp  VImageReader.hpp  VImageWriter.hpp  VLayout.hpp  VLayouter.hpp  VPacker.hpp  VProfileReader.hpp  VProfileWriter.hpp  VRecorder.hpp  VScanner.hpp  VUnpakcer.hpp
include/packer/data/: data.hpp
include/packer/impl/: DefaultProfileReader.hpp  DefaultProfileWriter.hpp  DefaultScanner.hpp  GapImage.hpp  Image.hpp  ImageReader.hpp  ImageWriter.hpp  LinearScanner.hpp  Packer.hpp  ScaledLayouter.hpp  SimpleLayouter.hpp  Unpacker.hpp
include/packer/raii/: CharBuffer.hpp  FilePtr.hpp  RCharBuffer.hpp  RFilePtr.hpp  RgbaBuffer.hpp
include/packer/util/: Bitmap.hpp  alias.hpp  gserr.hpp  util.hpp
src/: CMakeLists.txt
src/core/: VImage.cpp  VImageReader.cpp  VImageWriter.cpp  VLayouter.cpp  VPacker.cpp  VProfileReader.cpp  VProfileWriter.cpp  VScanner.cpp  VUnpacker.cpp
src/data/: data.cpp
src/impl/: DefaultProfileReader.cpp  DefaultProfileWriter.cpp  DefaultScanner.cpp  GapImage.cpp  Image.cpp  ImageReader.cpp  ImageWriter.cpp  LinearScanner.cpp  Packer.cpp  ScaledLayouter.cpp  SimpleLayouter.cpp  Unpacker.cpp
src/raii/: CharBuffer.cpp  FilePtr.cpp  RCharBuffer.cpp  RFilePtr.cpp  RgbaBuffer.cpp
src/test/: Makefile  TestBitmap.cpp  TestGapImage.cpp  TestImage.cpp  TestLayouter.cpp  TestLinearScanner.cpp  TestPacker.cpp  TestProfile.cpp  output.prf  output.txt
src/util/: Bitmap.cpp  gserr.cpp  util.cpp
